# safety-tooling

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: lint_and_test.yml
examples/anthropic_batch_api/: batch_api.ipynb  results.txt  run_anthropic_batch.py  run_anthropic_batch.sh
examples/inference_api/: inference_api.ipynb  vllm_api.ipynb
examples/open_ai_batch_api/: batch_api.ipynb
rtooling/apis/: utils.py
rtooling/apis/finetuning/: check.py  delete_files.ipynb  run.py
rtooling/apis/inference/: anthropic.py  api.py  cache_manager.py  gray_swan.py  huggingface.py  model.py
rtooling/apis/inference/gemini/: genai.py  vertexai.py
rtooling/apis/inference/openai/: base.py  chat.py  completion.py  embedding.py  moderation.py  s2s.py
rtooling/apis/inference/opensource/: batch_inference.py
rtooling/apis/inference/usage/: usage_anthropic.py  usage_openai.py
rtooling/apis/tts/: elevenlabs.py
rtooling/data_models/: inference.py  messages.py  utils.py
rtooling/utils/: audio_utils.py  caching_utils.py  experiment_utils.py  human_labeling_utils.py  image_utils.py  jailbreak_metrics.py  openai_utils.py  prompt_utils.py  text_utils.py  utils.py
safetytooling/apis/: batch_api.py  utils.py
safetytooling/apis/finetuning/: check.py  delete_files.ipynb  run.py
safetytooling/apis/finetuning/openai/: check.py  delete_files.ipynb  run.py
safetytooling/apis/finetuning/together/: run.py
safetytooling/apis/finetuning/together/huggingface_hub_example/: handler.md  handler.py
safetytooling/apis/inference/: anthropic.py  api.py  cache_manager.py  deepseek.py  gray_swan.py  huggingface.py  model.py  openrouter.py  runpod_vllm.py  together.py
safetytooling/apis/inference/gemini/: genai.py  vertexai.py
safetytooling/apis/inference/openai/: base.py  batch_api.py  chat.py  completion.py  embedding.py  moderation.py  s2s.py  utils.py
safetytooling/apis/inference/opensource/: batch_inference.py
safetytooling/apis/inference/usage/: usage_anthropic.py  usage_openai.py
safetytooling/apis/tts/: elevenlabs.py
safetytooling/data_models/: __init__.py  finetune.py  inference.py  messages.py
safetytooling/utils/: experiment_utils.py  hf_utils.py  human_labeling_utils.py  jailbreak_metrics.py  openai_utils.py  plot_utils.py  prompt_utils.py  special_prompts.py  text_utils.py  utils.py  vllm_utils.py
scripts/: push_together_model_to_hf.sh
tests/: test_api.py  test_api_cache.py  test_batch_api.py  test_other_apis.py  test_secrets.py
