# See https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "safetytooling"
description = "Safety Tooling"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "openai==1.58.1",
    "anthropic==0.42.0",
    "google-cloud-aiplatform==1.75.0",
    "google-generativeai==0.8.3",
    "together==1.3.11",
    "elevenlabs==1.50.3",
    "grayswan-api==0.1.0a49",
    "datasets==3.2.0",
    "transformers==4.49.0",
    "wandb==0.19.1",
    "pydub==0.25.1",
    "python-io",
    "soundfile==0.12.1",
    "llvmlite>=0.43.0",
    "librosa==0.10.2.post1",
    "opencv-python==4.10.0.84",
    "pandas==2.2.3",
    "scipy==1.14.1",
    "scikit-learn==1.6.0",
    "matplotlib==3.10.0",
    "plotly==5.24.1",
    "seaborn==0.13.2",
    "pydantic==2.10.4",
    "jsonlines==4.0.0",
    "Jinja2==3.1.4",
    "tenacity==8.5.0",
    "termcolor==2.5.0",
    "tqdm==4.66.5",
    "simple-parsing==0.1.6",
    "tiktoken==0.8.0",
    "redis==5.0.3",
    "dotenv==0.9.9",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-xdist==3.6.1",
]

[tool.setuptools]
packages = ["safetytooling"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:'audioop' is deprecated and slated for removal in Python 3.13:DeprecationWarning:pydub.utils"
]

[tool.ruff]
target-version = "py311"
extend-include = ["*.ipynb"]
extend-exclude = ["submodules"]

# Line length 120 to makes it easier to have multiple files open side-by-side.
line-length = 120

[tool.ruff.lint]
# Check that imports are sorted
extend-select = ["I"]

[tool.ruff.lint.isort]
# wandb is a package, but sometimes also a folder that gets created.
# We tell ruff to treat it always as a third-party package to make import
# sorting consistent.
known-third-party = ["wandb"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''