# See https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "safetytooling"
description = "Safety Tooling"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "openai==1.70.0",
    "anthropic==0.49.0",
    "google-cloud-aiplatform==1.87.0",
    "google-generativeai==0.8.4",
    "together==1.5.4",
    "elevenlabs==1.56.0",
    "grayswan-api==0.1.0a49",
    "datasets==3.5.0",
    "transformers==4.50.3",
    "wandb==0.19.9",
    "pydub==0.25.1",
    "python-io==0.3",
    "soundfile==0.13.1",
    "llvmlite==0.44.0",
    "librosa==0.10.2.post1",
    "opencv-python==4.11.0.86",
    "pandas==2.2.3",
    "scipy==1.15.2",
    "scikit-learn==1.6.1",
    "matplotlib==3.10.1",
    "plotly==6.0.1",
    "seaborn==0.13.2",
    "pydantic==2.11.1",
    "jsonlines==4.0.0",
    "Jinja2==3.1.6",
    "tenacity==9.1.2",
    "termcolor==3.0.1",
    "tqdm==4.67.1",
    "simple-parsing==0.1.7",
    "tiktoken==0.9.0",
    "redis==5.2.1",
    "dotenv==0.9.9",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-xdist==3.6.1",
    "huggingface_hub",
]

[tool.setuptools]
packages = ["safetytooling"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:'audioop' is deprecated and slated for removal in Python 3.13:DeprecationWarning:pydub.utils"
]

[tool.ruff]
target-version = "py311"
extend-include = ["*.ipynb"]
extend-exclude = ["submodules"]

# Line length 120 to makes it easier to have multiple files open side-by-side.
line-length = 120

[tool.ruff.lint]
# Check that imports are sorted
extend-select = ["I"]

[tool.ruff.lint.isort]
# wandb is a package, but sometimes also a folder that gets created.
# We tell ruff to treat it always as a third-party package to make import
# sorting consistent.
known-third-party = ["wandb"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''